[project]
name = "wcx"
version = "0.1.0"
description = "WeChat official account article exporter — local CLI + Claude Skill"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "手工川"}]
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27.0",
    "curl-cffi>=0.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "platformdirs>=4.0.0",
    "markdownify>=0.11.6",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
wcx = "wcx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wcx"]
